# repoconf

./: AGENTS.md  CLAUDE.md  Cargo.toml  DEV.md  README.md  TODO.md  commitlint.config.mjs  fnox.toml  lefthook.yml
.agents/: project.md
src/: command.rs  experimental_validation.rs  functions.rs  lib.rs  main.rs  traits.rs  types.rs
src/command/: add_command.rs  create_command.rs  init_command.rs  merge_command.rs  propagate_command.rs
src/experimental_validation/: examples.rs  traits.rs  types.rs
src/experimental_validation/examples/: non_empty_dir.rs
src/experimental_validation/traits/: expose.rs  strip.rs
src/experimental_validation/types/: with_empty_first_commit.rs
src/functions/: git_add_remote_if_not_exists.rs  git_refs.rs  some_or_current_dir.rs  task.rs  unwrap_or_current_dir.rs
src/traits/: ensure_branch.rs  git.rs  git_branch_exists.rs  git_remote_names.rs  is_clean_repo.rs  repo_name.rs  set_executable_bit.rs
src/types/: branch_name_strategy.rs  branch_name_strategy_value_parser.rs  command.rs  directory_already_exists.rs  git_branch_name.rs  git_remote.rs  git_remote_name.rs  git_remote_url.rs  git_repo_dir.rs  local_branch_does_not_exist_error.rs  repository_already_exists.rs  repository_not_clean_error.rs  unexpected_output.rs  visibility.rs
src/types/command/: add_command.rs  create.sh  create_command.rs  ensure_command.rs  init_command.rs  merge_command.rs  print_command.rs  propagate_command.rs
