[package]
name = "repoconf"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0 OR MIT"
description = "A utility CLI for managing configs across repos"
homepage = "https://github.com/DenisGorbachev/repoconf"
repository = "https://github.com/DenisGorbachev/repoconf"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "AGENTS.ts",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.lock",
    "deno.json",
    "commitlint.config.mjs",
    "fnox.toml",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
clap = { version = "4.5.11", features = ["derive", "env"] }
demand = { version = "1.6.4" }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
futures = "0.3.31"
itertools = { version = "0.14.0" }
strum = { version = "0.28.0", features = ["derive"] }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
thiserror = "2.0.17"
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = "2.5.4"
walkdir = { version = "2.5.0" }
xshell = { version = "0.3.0-pre.2" }
